tests/error/inout_errors/moved_out_if.err
Error: Copy violation (at $FILE:16:9)
   | 
14 | 
15 | @guppy
16 | def test(s: MyStruct, b: bool) -> None:
   |          ^^^^^^^^^^^ Borrowed argument s cannot be returned to the caller ...
   | 
18 |         use(s.q)
   |             --- since `s.q` with non-copyable type `qubit` was already
   |                 consumed here

Help: Consider writing a value back into `s.q` before returning

Guppy compilation failed due to 1 previous error
